src/tests/typing/fail/neg_bus.tj
fn rec<n>() = (a[n])
    if (n + 50 > 0) then
        a = rec<n-1>().0
    else 
        a = [0;n]
    end if

module main() = (b)
    shared b = ()
    n:
        b = rec<1>()
    until